VERSION 0.9.7
-------------
Release Date: ?

 - removed deprecated method display() in class Peak_View_Helper_Debug
 - added new view helper Peak_View_Helper_Grid
 - added method _filter_datetime() to class Peak_Filters_Advanced
 - updated vendor twitter bootstrap to 2.3.1

VERSION 0.9.6 
-------------
Release Date: 2013-04-09

 - Peak_View_Helper_Debugbar chrono now use $_SERVER['REQUEST_TIME_FLOAT'] if php >= 5.4
 - modified class Peak_Spl_Dirinfo to support recursive and non-recursive directory iterator
 - added param $return_row to method exists() in class Peak_Model_Zendatable
 - fixed missing default value for param $action of method redirect() in Peak_Controller_Action
 - removed php5.4 array syntax in method process() of class Peak_View_Helper_Assets
 - added method _filter_time() to class Peak_Filters_Advanced
 - fixed extended class name typo in Peak_View_Helper_Debugbar
 - added method saveTransaction() to class Peak_Model_Zendatable
 - removed deprecated class Peak_View_Helper_Calendar
 - renamed helpers file with first capital letter
 - fixed table/schema name in _getData() of class Peak_Model_Pagination
 - fixed old bug in class "Peak_Helpers" that prevented methods __get() and exists() from sometimes validate a file's existence 
   on an case sensitive os.
 - added method getLanguages() to Peak_Controller_Helper_Request
 - added an auto-detect file extension to Peak_View_Helper_assets
 - added method renderArray() to Peak_View_Render. This new method we use method render() for each files.
 - added a new exception constant ERR_VIEW_FILE_NOT_FOUND to Peak_View_Exception
 - changed the default path used by method render() in Peak_View_Render_Layouts. This path now point to apppath "theme" instead
   of apppath "theme_layouts". This will imply some changes in existing apps, but it will be more flexible and simpler to 
   include files contents of application related to views.
 - modified Peak_Core::initConfig() to support json config file.